welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:1: error: Missing closing brace `}' assumed here
def extrema(nums:Array[Int]): Int = 
^