welcome.lessons.welcome.array.maxvalue.Extrema.scala.code
def extrema(nums:Array[Int]): Int = 
{
	var max: Int=nums(0)
	var min: Int=nums(0)
	for (n <- 1 to nums.length-1)
	{
		if (nums(n)>max)
		{
			max=nums(n)
		} else if {min<nums(n)
		{
			min=nums(n)
		}
	}
	return max-min
}